# harnessify

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  hfy.yaml  pyproject.toml
docs/: adapters.md  cloud.md  deepagents.md  deploy_deepagents_support_refund.md  domain_packs.md  open_formats.md  openai_compatible.md  support_domain.md  vision.md
examples/deepagents/support_refund/: .env.example  AGENTS.md  README.md  agent.py  deepagents.toml  langgraph.json
harnessify/: __init__.py  cli.py  config.py
harnessify/adapters/: base.py  callable_agent.py  deepagents.py  hermes.py  langgraph.py  openai_compatible.py  openclaw.py  pyflue.py  shell_agent.py
harnessify/core/: __init__.py  compare.py  evaluator.py  guardrails.py  promote.py  redteam.py  rollback.py  run_store.py  support_runner.py  versions.py
harnessify/domains/: __init__.py  catalog.py
harnessify/formats/: __init__.py  manifests.py  readiness.py  schemas.py  trace.py
harnessify/integrations/: deepeval.py  docker_sandbox.py  git_repo.py  guardrails_ai.py  inspect_ai.py  mlflow.py  otel.py  promptfoo.py
tests/: conftest.py  test_cli_runtime_paths.py  test_compare.py  test_config.py  test_deepagents_adapter.py  test_deepagents_deploy_example.py  test_deepagents_support_runtime.py  test_domain_catalog.py  test_guardrails.py  test_open_formats.py  test_openai_compatible_adapter.py  test_openai_compatible_support_runtime.py  test_optional_integrations.py  test_promote_rollback.py  test_readiness.py  test_reference_agents.py  test_run_store.py  test_support_domain.py  test_versions.py
(+20 files in other folders)
