[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "harnessify"
version = "0.0.0"
description = "Production-readiness harness for AI agents: evals, red-teaming, guardrails, traces, version comparison, promotion, rollback, and continuous hardening."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Harnessify contributors" },
]
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
eval = []
redteam = []
guardrails = []
sandbox = []
tracking = []
git = []
all = []

[project.scripts]
hfy = "harnessify.cli:main"

[tool.setuptools.packages.find]
include = ["harnessify*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# TODO: Add concrete optional dependency package names once adapter choices are finalized.
